# docs/swagger.json
@@ -37,48 +37,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "Creates a new task with a unique ID if not provided",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Tasks"
-                ],
-                "summary": "Create a new task",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Task object to be created",
-                        "name": "task",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Task"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.Task"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    }
-                }
-            },
             "post": {
                 "description": "Creates a new task with a unique ID if not provided",
                 "consumes": [
@@ -117,7 +75,7 @@
         },
         "/tasks/": {
             "delete": {
-                "description": "Delets All Data",
+                "description": "Deletes All Data",
                 "consumes": [
                     "application/json"
                 ],
@@ -170,6 +128,55 @@
                         "schema": {
                             "$ref": "#/definitions/models.Task"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "put": {
+                "description": "Updates a task with the specified ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Update a task by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "Task ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Task object with fields to be updated",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateReq"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     },
                     "404": {
                         "description": "Not Found"
@@ -236,6 +243,19 @@
                 },
                 "title": {
                     "description": "Title of the task",
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateReq": {
+            "type": "object",
+            "properties": {
+                "completed": {
+                    "description": "New completion status for the task update",
+                    "type": "boolean"
+                },
+                "title": {
+                    "description": "New title for the task update",
                     "type": "string"
                 }
             }
